add nav with rwd, simple personal info, background img

--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name=“viewport” content=“width=device-width; initial-scale=1” />
+
+	<title>LeoKao</title>
+
+	<link rel="stylesheet" href="css/bootstrap.min.css" />
+	<link rel="stylesheet" href="css/normalize.css" />
+	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="css/icon.min.css" />
+	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+	<script src="js/jquery-3.1.1.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/main.js"></script>
+</head>
+<body>
+	<header class="header-back">
+		<div id="header" class="topbar clearfix">
+
+			<div id="nav">
+				<ul>
+					<li><a href="#">top</a></li>
+					<li><a href="#">about</a></li>
+					<li><a href="#">experience</a></li>
+					<li><a href="#">abilities</a></li>
+					<li><a href="#">interests</a></li>
+				</ul>
+			</div>
+
+			<a href="#" id="menu-trigger">
+				<i class="material-icons">menu</i>
+			</a>			
+		</div>
+
+		<div class="header">
+	        <img src="assets/avatar.jpg" alt="avatar">
+	        <div class="simply-introduce">
+	            <h1>Leo Kao</h1>
+	            <h3>1993.7.26</h3>
+	            <ul class="tel-mail">
+	                <li><a href="tel:+886-933-676-269">+886-933-676-269</a></li>
+	                <li><a href="mailto:leokao0726@gmail.com">leokao0726@gmail.com</a></li>
+	            </ul>
+	        </div>
+	        <div>
+	        	<a href="#"></a>
+	        </div>
+		</div>
+		<a href="#" id="goto-second-page">
+			<i class="material-icons">expand_more</i>
+		</a>
+	</header>
+	
+</body>
+</html>
