--- a/index.html
+++ b/index.html
@@ -16,10 +16,9 @@
 	<script src="js/bootstrap.min.js"></script>
 	<script src="js/main.js"></script>
 </head>
-<body>
-	<header class="header-back">
-		<div id="header" class="topbar clearfix">
-
+<body> 
+	<header id="header-back">
+		<div id="header" class="topbar container clearfix">
 			<div id="nav">
 				<ul>
 					<li><a href="#">top</a></li>
