--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			<div class="about">
 				<div class="row">  <!--remember use row to let them in line-->
 					<div class="col-sm-6">
-						<img class="my-photo" src="assets/my_photo.jpg" alt="image">
+						<img class="my-photo" src="assets/my_photo.JPG" alt="image">
 					</div>
 					<div class="col-sm-6">
 						<h3>Chia Hung, kao</h3>
