add social link and let down icon smooth to about place

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/main.css" />
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+	<link rel="stylesheet" href="https://opensource.keycdn.com/fontawesome/4.7.0/font-awesome.min.css" integrity="sha384-dNpIIXE8U05kAbPhy3G1cz+yZmTzA6CY8Vg/u2L9xRnHjJiAK76m2BIEaSEV+/aU" crossorigin="anonymous">
 
 	<script src="js/jquery-3.1.1.min.js"></script>
 	<script src="js/bootstrap.min.js"></script>
@@ -49,7 +50,36 @@
 			</div>
 
 			<div class="header">
-		        <img src="assets/avatar.jpg" alt="avatar">
+				<img src="assets/avatar.jpg" alt="avatar">
+				<div class="about-link">
+					<ul>
+						<li id="facebook">
+							<a href="https://www.facebook.com/profile.php?id=100002005371688" target="_blank">
+								<i class="fa fa-facebook-square fa-2x" aria-hidden="true"></i>
+							</a>
+						</li>
+						<li id="instagram">
+							<a href="https://www.instagram.com/leokao0726/" target="_blank">
+								<i class="fa fa-instagram fa-2x" aria-hidden="true"></i>
+							</a>
+						</li>
+						<li id="github">
+							<a href="https://github.com/leokao0726" target="_blank">
+								<i class="fa fa-github fa-2x"></i>
+							</a>
+						</li>
+						<li id="linkedin">
+							<a href="https://www.linkedin.com/in/chia-hung-kao-03641ab0/" target="_blank">
+								<i class="fa fa-linkedin-square fa-2x" aria-hidden="true"></i>
+							</a>
+						</li>
+						<li id="wordpress">
+							<a href="http://leoliday.zam.tw/" target="_blank">
+								<i class="fa fa-wordpress fa-2x" aria-hidden="true"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
 		        <div class="simply-introduce">
 		            <h1>Leo Kao</h1>
 		            <h3>1993.7.26</h3>
@@ -79,21 +109,13 @@
 						<img class="my-photo" src="assets/my_photo.JPG" alt="image">
 					</div>
 					<div class="col-sm-6">
-						<h3>Chia Hung, kao</h3>
+						<h3>Chia Hung, Kao</h3>
 						<h5>何とかなる</h5>
 						<p>
 							<span class="article-first-word">I</span> was born at Taipei, Taiwan. <br/>I graduated from <b>National Central University (NCU), College of Electrical Engineering &amp; Computer Science, Bachelor of Computer Science &amp; Information Engineering</b> since Jun. 2015. <br/>Mandarin(Native), English and Japanese.
 						</p>
 					</div>
 				</div>
-				<!-- <div class="about-link">
-					<ul>
-						<li><a href=""><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-						<li><a href=""><i class="fa fa-github" aria-hidden="true"></i></a></li>
-						<li><a href=""><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-						<li><a href=""><i class="fa fa-wordpress" aria-hidden="true"></i>
-				</div></a></li>
-					</ul> -->
 			</div>
 		</div>
 	</section>
