add some in about section

--- a/index.html
+++ b/index.html
@@ -105,14 +105,36 @@
 			<div class="about">
 				<div class="row">  <!--remember use row to let them in line-->
 					<div class="col-sm-6">
-						<img class="my-photo" src="assets/my_photo.JPG" alt="image">
+						<div class="photo">
+							<img class="my-photo" src="assets/my_photo.JPG" alt="image">
+						</div>
 					</div>
 					<div class="col-sm-6">
 						<h3 id="my-name">Chia Hung, Kao</h3>
 						<h5>何とかなる</h5>
-						<p>
-							<span class="article-first-word">I</span> was born at Taipei, Taiwan. <br/>I graduated from <b>National Central University (NCU), College of Electrical Engineering &amp; Computer Science, Bachelor of Computer Science &amp; Information Engineering</b> since Jun. 2015. <br/>Mandarin(Native), English and Japanese.
-						</p>
+						
+						<div id="switch">
+							<ul>
+								<li class="active">Education</li>
+								<li>military service</li>
+								<li>personality</li>
+							</ul>
+						</div>
+
+						<div id="content">
+							<div class="content active">
+								<p>
+									<span class="article-first-word">I</span> was born at Taipei, Taiwan. <br/>I graduated from <b>National Central University (NCU), College of Electrical Engineering &amp; Computer Science, Bachelor of Computer Science &amp; Information Engineering</b> since Jun. 2015. <br/>Mandarin(Native), English and Japanese.
+								</p>
+							</div>
+							<div class="content">
+								<span class="article-first-word">O</span>ne-year Compulsory Substitue Military Services at <b>Ministry of the Interior, National Immigration Agency.</b> Like the Police, we dedicated to serving illegal foreigners about passport, visa or penalty and marriage interview for Mainland Chinese spouse. 
+							</div>
+							<div class="content">
+								<span class="article-first-word">A</span>ctive, out-going, easy to get along with.<br/><span class="article-first-word">L</span>ove to challenge new things especially new technology for service.<br/><span class="article-first-word">W</span>illing to share news to others and meet new friends :D.
+							</div>
+						</div>
+
 					</div>
 				</div>
 			</div>
