add background img

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ recommend restaurants and attractions in Taipei for tourists mainly from Hong Ko
 		</div>
 	</section>
 
-	<hr />
+	<div id="cat-img"></div>
 
 <!--abilities-->
 	<section id="abilities">
