--- a/index.html
+++ b/index.html
@@ -253,21 +253,21 @@ recommend restaurants and attractions in Taipei for tourists mainly from Hong Ko
 
 					<div class="progress-bar">
 						<div class="progress" style="max-width: 70%;">
-							<span class="title">jquery / ajax / rwd</span>
+							<span class="title">jquery / ajax / rwd / reactjs</span>
 						</div>
 					</div>
 					<div class="pin">70%</div>
 				
 					<div class="progress-bar">
 						<div class="progress" style="max-width: 65%;">
-							<span class="title">android / java / git</span>
+							<span class="title">swift / git</span>
 						</div>
 					</div>
 					<div class="pin">65%</div>
 				
 					<div class="progress-bar">
 						<div class="progress" style="max-width: 50%;">
-							<span class="title">react / swift</span>
+							<span class="title">android / java</span>
 						</div>
 					</div>
 					<div class="pin">50%</div>
